flapivor/tests/tests-m3/hopix/typechecker/good/memory2.hopix
val r : cell (int) = ref (0)

val write : unit =
  r := 42

val read : int =
  !r