flapivor/tests/tests-m3/hopix/typechecker/bad/memory.hopix
val r : cell (int) = ref ("not me!")